app/page.css
@font-face {
  font-family: "Popsies";
  src: url("./fonts/Popsies.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Roboto";
  src: url("./fonts/Roboto-Thin.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

.font-popsies {
  font-family: "Popsies", sans-serif;
}

.font-roboto {
  font-family: "Roboto", sans-serif;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.fade-in {
  animation: fadeIn 2s ease-in-out;
}

body {
  background-color: black;
}

